// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product image debe de mostrar el componente con la imagen del producto 1`] = `
<div
  className=" productCard undefined "
>
  <img
    alt="Product"
    className="productImg undefined"
    src="./coffee-mug2.png"
  />
</div>
`;

exports[`Product image debe de mostrar el componente con la imagen por personalizada 1`] = `
<img
  alt="Product"
  className="productImg undefined"
  src="algun-img-path"
/>
`;
